Minor Bug Fix. Finish up game setup. Next Step: Work on player2plays() AI algorithm

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -3,7 +3,7 @@ Author: Li Wang
 Date: Apr 24 2017
 Title: Tic Tac Toe game with AI experiments
 Description:
-This game is for testing various AI algorithms for Tic Tac Game.
+This game is for testing various AI algorithms in Tic Tac Toe.
 -->
 
 <!DOCTYPE html>
@@ -27,22 +27,22 @@ Game
 	<button id ="hardbtn" class="selected">HARD</button>
 </div>
 <div id="container">
+	<div class="square" id="r0c0"></div>
+	<div class="square" id="r0c1"></div>
+	<div class="square" id="r0c2"></div>
+	<div class="square" id="r0c3"></div>
+	<div class="square" id="r1c0"></div>
 	<div class="square" id="r1c1"></div>
 	<div class="square" id="r1c2"></div>
 	<div class="square" id="r1c3"></div>
-	<div class="square" id="r1c4"></div>
+	<div class="square" id="r2c0"></div>
 	<div class="square" id="r2c1"></div>
 	<div class="square" id="r2c2"></div>
 	<div class="square" id="r2c3"></div>
-	<div class="square" id="r2c4"></div>
+	<div class="square" id="r3c0"></div>
 	<div class="square" id="r3c1"></div>
 	<div class="square" id="r3c2"></div>
 	<div class="square" id="r3c3"></div>
-	<div class="square" id="r3c4"></div>
-	<div class="square" id="r4c1"></div>
-	<div class="square" id="r4c2"></div>
-	<div class="square" id="r4c3"></div>
-	<div class="square" id="r4c4"></div>
 </div>
 
 <script type="text/javascript" src="js/tictactoe.js"></script>
