Reset to pseudocode version. Next step: figure out how to find action with value v

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -15,7 +15,8 @@ This game is for testing various AI algorithms in Tic Tac Toe.
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-<h1>The 
+<h1>
+The 
 <br>Tic Tac Toe</br>
 Game
 </h1>
