Finish node_num, max_prune, min_prune. Next Step: work on depth

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -1,6 +1,6 @@
 <!--      
 Author: Li Wang
-Date: Apr 24 2017
+Initial Creation Date: Apr 24 2017
 Title: Tic Tac Toe game with AI experiments
 Description:
 This game is for testing various AI algorithms in Tic Tac Toe.
@@ -16,7 +16,7 @@ This game is for testing various AI algorithms in Tic Tac Toe.
 </head>
 <body>
 <h1>
-The 
+ The 
 <br>Tic Tac Toe</br>
 Game
 </h1>
