Add README file. Remove unused files.

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -11,7 +11,6 @@ This game is for testing various AI algorithms in Tic Tac Toe.
 <head>
 	<title>Tic Tac Toe</title>
 	<link rel="stylesheet" type="text/css" href="css/tictactoe.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
@@ -29,22 +28,22 @@ Game
 	<button id ="hardbtn" class="selected">HARD</button>
 </div>
 <div id="container">
-	<div class="square" id="r0c0"><i></i></div>
-	<div class="square" id="r0c1"><i></i></div>
-	<div class="square" id="r0c2"><i></i></div>
-	<div class="square" id="r0c3"><i></i></div>
-	<div class="square" id="r1c0"><i></i></div>
-	<div class="square" id="r1c1"><i></i></div>
-	<div class="square" id="r1c2"><i></i></div>
-	<div class="square" id="r1c3"><i></i></div>
-	<div class="square" id="r2c0"><i></i></div>
-	<div class="square" id="r2c1"><i></i></div>
-	<div class="square" id="r2c2"><i></i></div>
-	<div class="square" id="r2c3"><i></i></div>
-	<div class="square" id="r3c0"><i></i></div>
-	<div class="square" id="r3c1"><i></i></div>
-	<div class="square" id="r3c2"><i></i></div>
-	<div class="square" id="r3c3"><i></i></div>
+	<div class="square" id="r0c0"></div>
+	<div class="square" id="r0c1"></div>
+	<div class="square" id="r0c2"></div>
+	<div class="square" id="r0c3"></div>
+	<div class="square" id="r1c0"></div>
+	<div class="square" id="r1c1"></div>
+	<div class="square" id="r1c2"></div>
+	<div class="square" id="r1c3"></div>
+	<div class="square" id="r2c0"></div>
+	<div class="square" id="r2c1"></div>
+	<div class="square" id="r2c2"></div>
+	<div class="square" id="r2c3"></div>
+	<div class="square" id="r3c0"></div>
+	<div class="square" id="r3c1"></div>
+	<div class="square" id="r3c2"></div>
+	<div class="square" id="r3c3"></div>
 </div>
 
 <script type="text/javascript" src="js/tictactoe.js"></script>
