Add functionality as human chooses who goes first

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -22,6 +22,8 @@ Game
 
 <div id="strip">
 	<button id="reset">New Game</button>
+	<button id = "humanfirst" class="selected">HUMAN FIRST</button>
+	<button id = "aifirst">AI FIRST</button>
 	<span id="message"></span>
 	<button id="easybtn">EASY</button>
 	<button id="mediumbtn">Medium</button>
