Minor bug and wording fix

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -3,7 +3,7 @@ Author: Li Wang
 Initial Creation Date: Apr 24 2017
 Title: Tic Tac Toe game with AI experiments
 Description:
-This game is for testing various AI algorithms in Tic Tac Toe.
+This web-based 4 x 4 tic-tac-toe game implements AI for human-computer competition.
 -->
 
 <!DOCTYPE html>
